# ANLP

./: .gitignore  README.md  requirements.txt  unit_retriever.py
HW1/: data.json  data_retriever.py  main.py  output.json  pyproject.toml  quantities.csv  unit_conversion.csv  unit_conversion_retriever.py  unit_converter.py  unit_extractor.ipynb  unit_names.csv  unit_normalization_conf.json  unit_normalizer.py  unit_retriever.py  units.csv
HW1/new/: unit_names.csv
HW1/parsi_io/modules/: address_extractions.py  cause_effect_extractions.py  quranic_extractions.py  time_extractions.py
HW1/parsi_io/modules/number_extractor/: number_extractor.py  pattern.py
HW1/parsi_io/test/: AddressExtraction_test.py  CauseEffectExtraction_test.py  QuranicExtraction_test.py  base.py
HW1/tests/: test_hw1.py
HW1/unit_extractor/: __init__.py  consts.py  extractor.py  output.py
