[tool.poetry]
name = "HW1"
version = "0.1.0"
description = ""
authors = ["ArshiAAkhavan <letmemakenewone@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
parstdex = "^1.1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
