[tool.poetry]
name = "HW1"
version = "0.1.0"
description = ""
authors = ["ArshiAAkhavan <letmemakenewone@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
parstdex = "^1.1.4"
pandas = "^1.4.2"
hazm = "^0.7.0"
bs4 = "^0.0.1"
requests = "^2.27.1"
regex = "^2022.3.15"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
